--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 
 Chapitre_02_Rapidite/TD_02_Calage/
 Chapitre_03_Precision/TD_01_Hayon/
+Chapitre_03_Precision/TD_02_EzWheel/
 
 # Windows image file caches
 Thumbs.db
