--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 Chapitre_02_Rapidite/TD_02_Calage/
 Chapitre_03_Precision/TD_01_Hayon/
 Chapitre_03_Precision/TD_02_EzWheel/
+Colles/Sujet/
 
 # Windows image file caches
 Thumbs.db
